--- a/public/Contact.html
+++ b/public/Contact.html
@@ -3,27 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RIBBOW | About</title>
+  <title>RIBBOW | Contact</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #fefbff;
-    }
-    .navbar-brand {
-      font-weight: 700;
-      font-size: 1.8rem;
-      color: #8a2be2;
-    }
-    .nav-link {
-      color: #6a1b9a;
-    }
-    .section-title {
-      color: #6a1b9a;
-      font-weight: 600;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -45,23 +28,36 @@
     </div>
   </nav>
 
-  <!-- About Section -->
+  <!-- Contact Section -->
   <section class="py-5">
-    <div class="container text-center">
-      <h2 class="section-title">About RIBBOW</h2>
-      <p class="mt-4" style="max-width: 800px; margin: auto; color: #555;">
-        RIBBOW is a proudly Nigerian fashion brand that specializes in handcrafted fashion accessories, bags, and more. We are committed to empowering creativity, promoting elegance, and offering affordable luxury through every product. Our mission is to make each customer feel unique, confident, and stylish.
-      </p>
+    <div class="container">
+      <h2 class="text-center section-title mb-4">Contact Us</h2>
+      <form id="contactForm" class="row g-3" style="max-width: 700px; margin: auto;">
+        <div class="col-md-6">
+          <input type="text" id="name" class="form-control" placeholder="Your Name" required>
+        </div>
+        <div class="col-md-6">
+          <input type="email" id="email" class="form-control" placeholder="Your Email" required>
+        </div>
+        <div class="col-12">
+          <textarea id="message" class="form-control" rows="4" placeholder="Your Message" required></textarea>
+        </div>
+        <div class="col-12 text-center">
+          <button type="button" onclick="sendMessage()" class="btn btn-purple">Send Message</button>
+        </div>
+      </form>
+      <div id="messageStatus" class="text-center mt-3"></div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center" style="background-color: #6a1b9a; color: white; padding: 20px 0;">
+  <footer class="text-center footer-purple">
     <div class="container">
       <p>&copy; 2025 RIBBOW. All rights reserved.</p>
     </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
