--- a/public/add-to-cart.html
+++ b/public/add-to-cart.html
@@ -5,41 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Add to Cart | RIBBOW</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #fefbff;
-    }
-    .product-box {
-      border: 1px solid #e0b3ff;
-      padding: 20px;
-      border-radius: 10px;
-      background-color: #fff;
-      max-width: 600px;
-      margin: auto;
-    }
-    .product-img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      border-radius: 10px;
-    }
-    .btn-purple {
-      background-color: #8a2be2;
-      color: white;
-      border: none;
-    }
-    .btn-purple:hover {
-      background-color: #6a1b9a;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <div class="container py-5">
   <h2 class="text-center mb-4" style="color: #6a1b9a;">Confirm Add to Cart</h2>
   <div class="product-box text-center">
-    <img id="productImage" class="product-img mb-3" src="placeholder.jpg" alt="Product Images">
+    <img id="productImage" class="product-img mb-3" src="Images/placeholder.jpg" alt="Product Image">
     <h4 id="productTitle">Loading...</h4>
     <p><strong>Price:</strong> ₦<span id="productPrice">0</span></p>
     <button class="btn btn-purple mt-3" onclick="addToCart()">Add to Cart</button>
@@ -49,7 +22,9 @@
   </div>
 </div>
 
+<script src="js/script.js"></script>
 <script>
+  // Page-specific product loading
   const params = new URLSearchParams(window.location.search);
   const title = decodeURIComponent(params.get('title') || '');
   const price = decodeURIComponent(params.get('price') || '');
@@ -67,20 +42,8 @@
   } else {
     productTitle.textContent = "Invalid Product";
     productPrice.textContent = "0";
-    productImage.src = "placeholder.jpg";
+    productImage.src = "Images/placeholder.jpg";
     productImage.alt = "No image";
-  }
-
-  function addToCart() {
-    if (!title || !price || !image) {
-      alert("Missing product information.");
-      return;
-    }
-
-    let cart = JSON.parse(localStorage.getItem('cart')) || [];
-    cart.push({ title, price, image });
-    localStorage.setItem('cart', JSON.stringify(cart));
-    alert(`${title} has been added to your cart.`);
   }
 </script>
 
