--- a/public/auth.html
+++ b/public/auth.html
@@ -6,41 +6,11 @@
   <title>RIBBOW | Login / Register</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet"/>
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #fefbff;
-    }
-    .container {
-      max-width: 500px;
-      margin-top: 50px;
-      background: #fff0fa;
-      padding: 30px;
-      border-radius: 10px;
-      border: 1px solid #e0b3ff;
-    }
-    .nav-tabs .nav-link.active {
-      background-color: #8a2be2;
-      color: white !important;
-    }
-    .nav-tabs .nav-link {
-      color: #6a1b9a;
-      font-weight: 500;
-    }
-    .btn-purple {
-      background-color: #8a2be2;
-      color: white;
-      border: none;
-      font-weight: 500;
-    }
-    .btn-purple:hover {
-      background-color: #6a1b9a;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<div class="container">
+<div class="container auth-container">
   <ul class="nav nav-tabs mb-4" id="authTab" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#loginTab" type="button" role="tab">Login</button>
@@ -65,28 +35,28 @@
         <button type="submit" class="btn btn-purple w-100">Login</button>
       </form>
     </div>
-
-    <!-- Register Form -->
-    <div class="tab-pane fade" id="registerTab" role="tabpanel">
-      <form action="register.php" method="POST">
-        <div class="mb-3">
-          <label>Name</label>
-          <input type="text" class="form-control" name="name" required>
-        </div>
-        <div class="mb-3">
-          <label>Email</label>
-          <input type="email" class="form-control" name="email" required>
-        </div>
-        <div class="mb-3">
-          <label>Password</label>
-          <input type="password" class="form-control" name="password" required>
-        </div>
-        <button type="submit" class="btn btn-purple w-100">Register</button>
-      </form>
+<!-- Register Form -->
+<div class="tab-pane fade" id="registerTab" role="tabpanel">
+  <form action="register.php" method="POST" id="registerForm">
+    <div class="mb-3">
+      <label>Name</label>
+      <input type="text" class="form-control" name="name" id="regName" required>
     </div>
-  </div>
+    <div class="mb-3">
+      <label>Email</label>
+      <input type="email" class="form-control" name="email" id="regEmail" required>
+    </div>
+    <div class="mb-3">
+      <label>Password</label>
+      <div class="input-group">
+        <input type="password" class="form-control" name="password" id="regPassword" required>
+        <button type="button" class="btn btn-outline-secondary" id="toggleRegPassword">Show</button>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-purple w-100" id="registerBtn" disabled>Register</button>
+  </form>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
