--- a/public/index.html
+++ b/public/index.html
@@ -7,60 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #fefbff;
-    }
-    .navbar {
-      background-color: #fce4ff;
-    }
-    .navbar-brand {
-      font-weight: 700;
-      font-size: 1.8rem;
-      color: #8a2be2;
-    }
-    .nav-link {
-      color: #6a1b9a !important;
-      font-weight: 500;
-    }
-    .nav-link:hover {
-      color: #4a0072 !important;
-    }
-    .hero {
-      background: url('Images/Banner.png') no-repeat center top;
-      background-size: contain;
-      background-color: #fefbff;
-      height: 550px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: white;
-    }
-    .hero h1 {
-      font-size: 2.5rem;
-      font-weight: 500;
-      color: #4a0072;
-    }
-    .btn-purple {
-      background-color: #8a2be2;
-      border: none;
-      color: white;
-      font-weight: 500;
-    }
-    .btn-purple:hover {
-      background-color: #6a1b9a;
-    }
-    .feature-icon {
-      font-size: 2rem;
-      color: #8a2be2;
-    }
-    .section-heading {
-      font-weight: 600;
-      color: #6a1b9a;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -121,7 +68,7 @@
     <div class="container text-center">
       <h2 class="section-heading">About RIBBOW</h2>
       <p class="mx-auto" style="max-width: 700px;">
-        RIBBOW is a fashion-forward brand dedicated to delivering beautiful and high-quality accessories made for every woman who loves to stand out. Our products are tailored with love and made to fit every style.
+        RIBBOW is a fashion-forward brand delivering high-quality accessories made for every woman who loves to stand out.
       </p>
     </div>
   </section>
@@ -152,17 +99,7 @@
     <p class="mb-0">&copy; 2025 RIBBOW. All rights reserved.</p>
   </footer>
 
-  <script>
-    function goToShop() {
-      const isLoggedIn = localStorage.getItem("isLoggedIn");
-      if (isLoggedIn === "true") {
-        window.location.href = "shop.html";
-      } else {
-        alert("Please login or register to access the shop.");
-        window.location.href = "auth.html";
-      }
-    }
-  </script>
+  <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
