--- a/public/login.html
+++ b/public/login.html
@@ -5,50 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login | RIBBOW</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #fefbff;
-    }
-    .form-container {
-      max-width: 500px;
-      margin: 80px auto;
-      padding: 30px;
-      border-radius: 10px;
-      background-color: #ffffff;
-      box-shadow: 0 0 10px rgba(138, 43, 226, 0.1);
-    }
-    h2 {
-      color: #6a1b9a;
-      font-weight: 600;
-    }
-    .btn-purple {
-      background-color: #8a2be2;
-      color: #fff;
-      border: none;
-    }
-    .btn-purple:hover {
-      background-color: #6a1b9a;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
 <div class="form-container">
   <h2 class="text-center mb-4">Login to RIBBOW</h2>
-  <form action="login.php" method="POST">
+  <form action="login.php" method="POST" id="loginForm">
     <div class="mb-3">
       <label for="email" class="form-label">Email address</label>
       <input type="email" class="form-control" name="email" id="email" required>
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">Password</label>
-      <input type="password" class="form-control" name="password" id="password" required>
+      <div class="input-group">
+        <input type="password" class="form-control" name="password" id="password" required>
+        <button type="button" class="btn btn-outline-secondary" id="togglePassword">Show</button>
+      </div>
     </div>
-    <button type="submit" class="btn btn-purple w-100">Login</button>
+    <button type="submit" class="btn btn-purple w-100" id="loginBtn" disabled>Login</button>
   </form>
   <p class="text-center mt-3">Don't have an account? <a href="register.html" style="color:#8a2be2;">Register now</a></p>
 </div>
 
+<script src="js/script.js"></script>
 </body>
 </html>
