--- a/public/register.html
+++ b/public/register.html
@@ -5,45 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register | RIBBOW</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #fefbff;
-    }
-    .form-container {
-      max-width: 500px;
-      margin: 80px auto;
-      padding: 30px;
-      border-radius: 10px;
-      background-color: #ffffff;
-      box-shadow: 0 0 10px rgba(138, 43, 226, 0.1);
-    }
-    h2 {
-      color: #6a1b9a;
-      font-weight: 600;
-    }
-    .btn-purple {
-      background-color: #8a2be2;
-      color: #fff;
-      border: none;
-    }
-    .btn-purple:hover {
-      background-color: #6a1b9a;
-    }
-    .switch-link {
-      text-align: center;
-      margin-top: 20px;
-      font-size: 14px;
-    }
-    .switch-link a {
-      color: #8a2be2;
-      font-weight: 500;
-      text-decoration: none;
-    }
-    .switch-link a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -65,11 +28,11 @@
     <button type="submit" class="btn btn-purple w-100">Register</button>
   </form>
 
-  <!-- Link to Login -->
   <div class="switch-link">
     Already have an account? <a href="login.html">Login here</a>
   </div>
 </div>
 
+<script src="js/script.js"></script>
 </body>
 </html>
