--- a/public/product-details.html
+++ b/public/product-details.html
@@ -53,6 +53,18 @@
     </div>
   </section>
 
+  <!-- Floating Social Icons -->
+<div class="floating-icons">
+  <a href="https://wa.me/2347017557260" class="whatsapp-icon" target="_blank"><i class="fab fa-whatsapp"></i></a>
+  <a href="https://instagram.com/_RIBBOW_" class="instagram-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.tiktok.com/@shuir_dar" class="tiktok-icon" target="_blank"><i class="fab fa-tiktok"></i></a>
+</div>
+
+<!-- Dark/Light Mode Toggle -->
+<button id="themeToggle" class="theme-toggle" aria-label="Toggle dark mode">
+  <i class="fas fa-moon"></i>
+</button>
+
   <!-- Footer -->
   <footer class="text-center footer-purple">
     <div class="container">
