--- a/public/products.html
+++ b/public/products.html
@@ -23,6 +23,7 @@
           <li class="nav-item"><a class="nav-link" href="products.html" style="color: #6a1b9a;">Products</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html" style="color: #6a1b9a;">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html" style="color: #6a1b9a;">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" onclick="logoutUser()">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -36,7 +37,7 @@
         <!-- Product 1: Beaded Handbags -->
 <div class="col-md-4">
   <div class="card h-100 product-card">
-    <img src="Images/beadedwhite.jpg.jpg" class="card-img-top" alt="Beaded Handbags">
+    <img src="Images/beadedwhite.jpg" class="card-img-top" alt="Beaded Handbags">
     <div class="card-body">
       <h5 class="card-title">Beaded Handbag</h5>
       <p class="card-text">₦30,000</p>
@@ -48,7 +49,7 @@
 <!-- Product 2: Tote Bags -->
 <div class="col-md-4">
   <div class="card h-100 product-card">
-    <img src="Images/beadedblack.jpg.jpg" class="card-img-top" alt="Tote Bags">
+    <img src="Images/beadedblack.jpg" class="card-img-top" alt="Tote Bags">
     <div class="card-body">
       <h5 class="card-title">Beaded Handbag</h5>
       <p class="card-text">₦30,000</p>
@@ -60,7 +61,7 @@
 <!-- Product 3: Hair Clips -->
 <div class="col-md-4">
   <div class="card h-100 product-card">
-    <img src="Images/pin1.img.jpeg" class="card-img-top" alt="Hair Clips">
+    <img src="Images/image1.jpg" class="card-img-top" alt="Hair Clips">
     <div class="card-body">
       <h5 class="card-title">Hair Clips</h5>
       <p class="card-text">₦1,500</p>
@@ -68,6 +69,18 @@
     </div>
   </div>
 </div>
+
+<!-- Floating Social Icons -->
+<div class="floating-icons">
+  <a href="https://wa.me/2347017557260" class="whatsapp-icon" target="_blank"><i class="fab fa-whatsapp"></i></a>
+  <a href="https://instagram.com/_RIBBOW_" class="instagram-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.tiktok.com/@shuir_dar" class="tiktok-icon" target="_blank"><i class="fab fa-tiktok"></i></a>
+</div>
+
+<!-- Dark/Light Mode Toggle -->
+<button id="themeToggle" class="theme-toggle" aria-label="Toggle dark mode">
+  <i class="fas fa-moon"></i>
+</button>
 
   <!-- Footer -->
   <footer class="text-center" style="background-color: #6a1b9a; color: white; padding: 20px 0;">
