--- a/public/add-to-cart.html
+++ b/public/add-to-cart.html
@@ -3,49 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Add to Cart | RIBBOW</title>
+  <title>RIBBOW | Product Added</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
 
-<div class="container py-5">
-  <h2 class="text-center mb-4" style="color: #6a1b9a;">Confirm Add to Cart</h2>
-  <div class="product-box text-center">
-    <img id="productImage" class="product-img mb-3" src="Images/placeholder.jpg" alt="Product Image">
-    <h4 id="productTitle">Loading...</h4>
-    <p><strong>Price:</strong> ₦<span id="productPrice">0</span></p>
-    <button class="btn btn-purple mt-3" onclick="addToCart()">Add to Cart</button>
-    <br><br>
-    <a href="shop.html" class="btn btn-outline-secondary">Continue Shopping</a>
-    <a href="cart.html" class="btn btn-outline-primary">Go to Cart</a>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg sticky-top shadow-sm py-3 nav-purple">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">RIBBOW</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="shop.html">Back to Shop</a></li>
+        <li class="nav-item"><a class="nav-link" href="cart.html">View Cart</a></li>
+        <li class="nav-item"><a class="nav-link" href="#" onclick="logoutUser()">Logout</a></li>
+      </ul>
+    </div> 
+  </div> 
+</nav>
+
+<!-- Product Summary -->
+<section class="py-5 text-center">
+  <div class="container">
+    <h2 class="mb-4">Product Added to Cart</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card shadow-sm">
+          <img id="productImage" src="public/Images/Beaded-banner.png" class="card-img-top" alt="Product Image" style="max-height: 300px; object-fit: cover;">
+          <div class="card-body">
+            <h5 id="productTitle" class="card-title">Loading...</h5>
+            <p>₦<span id="productPrice">0</span></p>
+            <a href="cart.html" class="btn btn-success me-2">Go to Cart</a>
+            <a href="shop.html" class="btn btn-outline-primary">Continue Shopping</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-
-<script src="js/script.js"></script>
+</section>
 <script>
-  // Page-specific product loading
-  const params = new URLSearchParams(window.location.search);
-  const title = decodeURIComponent(params.get('title') || '');
-  const price = decodeURIComponent(params.get('price') || '');
-  const image = decodeURIComponent(params.get('image') || '');
-
-  const productTitle = document.getElementById('productTitle');
-  const productPrice = document.getElementById('productPrice');
-  const productImage = document.getElementById('productImage');
-
-  if (title && price && image) {
-    productTitle.textContent = title;
-    productPrice.textContent = parseInt(price).toLocaleString();
-    productImage.src = image;
-    productImage.alt = title;
-  } else {
-    productTitle.textContent = "Invalid Product";
-    productPrice.textContent = "0";
-    productImage.src = "Images/placeholder.jpg";
-    productImage.alt = "No image";
-  }
+// Call the function on page load
+  document.addEventListener("DOMContentLoaded", addToCartFromURL);
 </script>
 
+<!-- Floating Social Icons -->
+<div class="floating-icons">
+  <a href="https://wa.me/2347017557260" class="whatsapp-icon" target="_blank"><i class="fab fa-whatsapp"></i></a>
+  <a href="https://instagram.com/_RIBBOW_" class="instagram-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.tiktok.com/@shuir_dar" class="tiktok-icon" target="_blank"><i class="fab fa-tiktok"></i></a>
+</div>
+
+<!-- Dark/Light Mode Toggle -->
+<button id="themeToggle" class="theme-toggle" aria-label="Toggle dark mode">
+  <i class="fas fa-moon"></i>
+</button>
+
+<!-- Footer -->
+<footer class="text-center footer-purple mt-5 py-4" style="background-color: #6a1b9a; color: white;">
+  <p>&copy; 2025 RIBBOW. All rights reserved.</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/script.js"></script>
+  
 </body>
 </html>
