--- a/public/login.html
+++ b/public/login.html
@@ -28,6 +28,7 @@
   <p class="text-center mt-3">Don't have an account? <a href="register.html" style="color:#8a2be2;">Register now</a></p>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
