--- a/public/signup.html
+++ b/public/signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Register | RIBBOW</title>
+  <title>Signup | RIBBOW</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="css/style.css" />
@@ -12,7 +12,7 @@
 
 <div class="form-container">
   <h2 class="text-center mb-4">Create Your RIBBOW Account</h2>
-  <form action="register.php" method="POST">
+  <form action="signup.php" method="POST">
     <div class="mb-3">
       <label for="username" class="form-label">Username</label>
       <input type="text" class="form-control" name="username" id="username" required>
@@ -25,14 +25,15 @@
       <label for="password" class="form-label">Password</label>
       <input type="password" class="form-control" name="password" id="password" required>
     </div>
-    <button type="submit" class="btn btn-purple w-100">Register</button>
+    <button type="submit" class="btn btn-purple w-100">Signup</button>
   </form>
-
   <div class="switch-link">
     Already have an account? <a href="login.html">Login here</a>
   </div>
 </div>
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
